--- a/CourseMate/wwwroot/css/account.css
+++ b/CourseMate/wwwroot/css/account.css
@@ -1,5 +1,5 @@
 ﻿.account-container {
-    background-image: url('../images/account-bg.jpg');
+    background-image: url('../images/back.png');
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
@@ -11,11 +11,14 @@
 }
 
 .account-box {
-    background-color: white;
+    background: rgba(255, 255, 255, 0.15); 
+    backdrop-filter: blur(12px); 
+    -webkit-backdrop-filter: blur(12px); 
     padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    max-width: 500px;
+    border-radius: 16px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+    max-width: 600px;
     width: 100%;
-    opacity: .9;
+    border: 1px solid rgba(255, 255, 255, 0.2); 
 }
+
