--- a/CourseMate/Views/Home/Index.cshtml
+++ b/CourseMate/Views/Home/Index.cshtml
@@ -18,3 +18,6 @@ else
         <a asp-controller="Home" asp-action="Privacy" class="btn btn-primary btn-lg px-4">Get Started</a>
     </div>
 }
+
+
+<partial name="_HomeContentPartial" />
