--- a/CourseMate/Views/Shared/_SidebarPartial.cshtml
+++ b/CourseMate/Views/Shared/_SidebarPartial.cshtml
@@ -1,15 +1,16 @@
 ﻿<style>
     .sidebar {
-        position: fixed;
+        position: fixed; 
         top: 0;
         left: 0;
-        height: 100vh;
+        min-height: 100vh; 
         width: 250px;
         background-color: var(--secondary-color);
         color: var(--light-color);
         padding: 20px;
         z-index: 1000;
-        overflow-y: auto;
+        overflow-y: auto; 
+        box-sizing: border-box; 
     }
 
     .sidebar-header {
