--- a/CourseMate/wwwroot/css/site.css
+++ b/CourseMate/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+```css
 .btn, .nav-link {
     transition: var(--transition);
 }
@@ -38,10 +39,17 @@ body.loaded {
 
 @media (max-width: 768px) {
     .navbar-nav {
-        text-align: center;
+        justify-content: flex-end; 
     }
 
     .nav-item {
         margin: 0.5rem 0;
     }
 }
+
+.sidebar a.active:focus {
+    outline: 2px solid var(--brand-color);
+    outline-offset: 2px;
+}
+
+```
