--- a/CourseMate/Views/Shared/_SidebarPartial.cshtml
+++ b/CourseMate/Views/Shared/_SidebarPartial.cshtml
@@ -21,6 +21,10 @@
         color: var(--brand-color);
         text-align: center;
         z-index: 1001;
+        border: none;
+        outline: none;
+        box-shadow: none;
+        border-right: none;
     }
     
     .sidebar {
